liste clients OK

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -19,10 +19,13 @@
                     <a class="nav-link" href="{{ path('index') }}">Index<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link" href="{{ path('liste') }}">Liste</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link" href="{{ path('ajout') }}">Ajout</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Modification</a>
+                    <a class="nav-link" href="{{ path('modif') }}">Modification</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Suppression</a>
