--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -19,16 +19,10 @@
                     <a class="nav-link" href="{{ path('index') }}">Index<span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="{{ path('liste') }}">Liste</a>
+                    <a class="nav-link" href="{{ path('liste_clients') }}">Liste</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="{{ path('ajout') }}">Ajout</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="{{ path('modif') }}">Modification</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Suppression</a>
                 </li>
                 </ul>
                 <form class="form-inline my-2 my-lg-0">
