--- a/templates/client/liste_clients.html.twig
+++ b/templates/client/liste_clients.html.twig
@@ -9,7 +9,7 @@
             <h1 class="text-center text-primary p-4">Liste des clients</h1>
         </div>
         <div class="row justify-content-center">
-            <div class="col-8 p-4 m-0 text-primary">
+            <div class="col-9 p-4 m-0 text-primary">
             <div class="table-responsive">
 <table class="table table-hover">
   <thead>
@@ -21,6 +21,7 @@
         <th scope="col">Rue</th>
         <th scope="col">Ville</th>
         <th scope="col">Code Postal</th>
+        <th colspan="2">Options d'administration</th>
     </tr>
   </thead>
   <tbody>
@@ -33,6 +34,8 @@
                 <td>{{client.rueClient |capitalize}}</td>
                 <td>{{client.villeClient |capitalize}}</td>
                 <td>{{client.codePostalClient |capitalize}}</td>
+                <td><a href="{{path('modif',{'id': client.id})}}" class="text-white"><span class="material-icons" title="Modifier ce client">Modifier</span></a></td>
+                <td><a href="{{path('liste_clients',{'supp':client.id})}}" class="text-white"><span class="material-icons" title="Supprimer ce client">Supprimer ce client</span></a></td>
             </tr>
                
             {% endfor %}
